# orgaDatos

./: CMakeLists.txt
src/: main.cpp
src/argHandler/: ArgHandler.cpp  Args.cpp  Args.h  argHandler.h
src/commandFactory/: CSVCommand.cpp  CSVCommand.h  Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CreateCommand.cpp  CreateCommand.h  DeleteCommand.cpp  DeleteCommand.h  InsertCommand.cpp  InsertCommand.h  MultiplyCommand.cpp  MultiplyCommand.h  ProyectionCommand.cpp  ProyectionCommand.h  SelectCommand.cpp  SelectCommand.h  UnionCommand.cpp  UnionCommand.h
src/filesManagers/: BlockFileManager.cpp  BlockFileManager.h  FileHandler.cpp  FileHandler.h  FileManager.cpp  FileManager.h  RegisterFileManager.cpp  RegisterFileManager.h
src/filesStructure/: Block.cpp  Block.h  FileHeader.cpp  FileHeader.h  FreeRegOffset.cpp  FreeRegOffset.h  OcupationMap.cpp  OcupationMap.h  Register.cpp  Register.h
src/filesStructure/Field/: DateField.cpp  DateField.h  Field.cpp  Field.h  FieldFactory.cpp  FieldFactory.h  IntField.cpp  IntField.h  StringField.cpp  StringField.h
src/insert/: main.cpp
