cmake_minimum_required(VERSION 2.6)
project(orgaDatos)
set(CMAKE_CXX_FLAGS "-std=c++0x")
add_executable(exec src/argHandler/Args.cpp src/argHandler/ArgHandler.cpp src/main.cpp src/filesManagers/BlockFileManager.cpp src/filesManagers/BlockFileManager.h src/filesManagers/RegisterFileManager.cpp src/filesManagers/RegisterFileManager.h src/filesManagers/FileManager.h)
add_executable(test test/main.cpp src/filesManagers/BlockFileManager.cpp src/filesManagers/BlockFileManager.h src/filesManagers/FileManager.h)
add_executable(insert src/insert/main.cpp src/filesStructure/FileHeader.cpp src/filesStructure/FileHeader.h)